kube/deployment-integ.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: dev
  name: mock-api
  labels:
    app: mock-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: mock-api
      annotations:
          iam.amazonaws.com/role: citadel-prod
    spec:
      restartPolicy: Always
      volumes:
      - name: mock-api-data
        emptyDir: {}
      - name: git-secret # revisar esse cara para ter permissões no repo
        secret:
          secretName: git-creds-labs
          items:
            - key: known_hosts
              path: known_hosts
              mode: 0400
            - key: ssh
              path: ssh
              mode: 0400

      containers:
      - name: mock-api-server
        image: registry.docker.elo7aws.com.br/mock-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
        resources:
          limits:
            cpu: 1.0
            memory: 1024Mi
          requests:
            cpu: 0.5
            memory: 1024Mi
        volumeMounts:
        - name: mock-api-data
          mountPath: /data

      serviceAccountName: default
      nodeSelector:
        elo7-environment: "dev"

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mock-api-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
spec:
  rules:
  - host: mock-api.kube.aws.elo7.io
    http:
      paths:
      - backend:
          serviceName: mock-api
          servicePort: 80

---

apiVersion: "v1"
kind: "Service"
metadata:
  name: "mock-api"
  namespace: dev
  labels:
    name: "mock-api"
spec:
  ports:
  - port: 80
    targetPort: 9090
  selector:
    app: "mock-api"
